[tool.poetry]
name = "expiration-date-analyzer"
version = "0.1.0"
description = "Estimates expiration date of documents using word co-occurrence."
readme = "README.md"
authors = ["Nagashima Hirotaka"]

[tool.poetry.dependencies]
python = "^3.10"
eel = "^0.16.0"
matplotlib = "^3.7.0"
mecab-python3 = "^1.0.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
python-dateutil = "^2.8.0"
requests = "^2.28.0"
scikit-learn = "^1.3.0"
scipy = "^1.10.0"
sutime = "^1.0.0"
tweepy = "^4.0.0"
tzlocal = "^5.0"
ipadic = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
